--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 body {
     font-family: 'Raleway', sans-serif;
     overflow: hidden;
-    background-image: url(../img/landing.PNG);
+    background-image: url(../img/landing.png);
     background-size: cover;
     background-position: center;
 }
